[package]
name = "zkp-login"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "1.0"
rand = "0.8.5"
bulletproofs = "5.0.0"
hex = "0.4.3"
curve25519-dalek = "4.1.3"
# sha2 = "0.10.8"
# serde_json = "1.0"
# dotenv = "0.15.0"
# bcrypt = "0.13" 
